added bbmap for fastq management

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,7 @@ params {
     docker_container_biobakery = "biobakery/workflows:3.0.0.a.7"
     docker_container_multiqc = "quay.io/biocontainers/multiqc:1.11--pyhdfd78af_0"
     docker_container_qiime2 = "qiime2/core:2020.8"
+    docker_container_bbmap = "quay.io/biocontainers/bbmap:38.87--h1296035_0"
 	
     /* 	Execution flow parameters
      --------------------------------*/	
@@ -92,12 +93,11 @@ process
 		memory = '32 GB'  
 	}	
 
-	
 	withName: log
 	{
 		time =  '30m'
 		cpus = 1
-		memory = '100 MB'  
+		memory = '1 GB'  
 	}
 	
 }
