added new aws config and reports

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,3 @@
-
 manifest {
   name = 'nf-reads-profiler'
   author = 'Sunit Jain'
@@ -7,6 +6,8 @@ manifest {
   mainScript = 'main.nf'
   version = '0.0.1'
 }
+
+includeConfig "$projectDir/conf/aws_batch.config"
 
 params {
 
@@ -28,7 +29,10 @@ params {
 
     singleEnd = false  //Whether we the input reads are single or paired-end 
     mergeReads = false
+    project="00_TEST"
+    prefix="output"
 	  outdir="s3://genomics-workflow-core/Results/reads-profiler"
+    
 				
     /* 	Processing parameters
      --------------------------------*/
@@ -59,14 +63,20 @@ params {
 
 timeline {
   enabled = false
+  overwrite = true
+  file = "$params.outdir/$params.project/execution_reports/timeline.html"
 }
 
 report {
   enabled = false
+  overwrite = true
+  file = "$params.outdir/$params.project/execution_reports/report.html"
 }
 
 dag {
-  enabled = false
+    enabled = false
+    overwrite = true
+    file = "$params.outdir/$params.project/execution_reports/pipeline_dag.html"
 }
 
 process 
@@ -96,8 +106,9 @@ process
 	withName: log
 	{
 		time =  '30m'
-		cpus = 1
-		memory = '1 GB'  
+		cpus = 2
+		memory = '8 GB'  
+    errorStrategy = 'ignore'
 	}
 	
 }
