updated aws batch configs

--- a/conf/aws_batch.config
+++ b/conf/aws_batch.config
@@ -1,19 +1,17 @@
 // from https://github.com/nextflow-io/nextflow/issues/1371#issuecomment-587958867
 executor {
-	submitter {
-		rateLimit = '20/s'
-		autoThrottle = true
-		poolSize = 8
-		queueSize = 5000
-		maxPoolSize = 8
-		maxRetries = 50000
-		keepAlive = '1 min'
-		errorBurstDelay = '1 sec'
-		backOffMinRate = 0
-		backOffFactor = 2
-		rampUpInterval = 100
-		rampUpFactor = 1.2
-	}
+	submitRateLimit = '20/s'
+	autoThrottle = true
+	// poolSize = 8
+	queueSize = 2
+	// maxPoolSize = 8
+	maxRetries = 50000
+	keepAlive = '1 min'
+	errorBurstDelay = '1 sec'
+	backOffMinRate = 0
+	backOffFactor = 2
+	rampUpInterval = 100
+	rampUpFactor = 1.2
 }
 
 aws{
@@ -31,6 +29,6 @@ aws{
 	batch {
 		maxTransferAttempts = 100
 		delayBetweenAttempts = 1000
-		maxParallelTransfers = 8
+		maxParallelTransfers = 2
 	}
 }
