added ability to skip taxonomic profiling

--- a/nextflow.config
+++ b/nextflow.config
@@ -32,6 +32,8 @@ params {
     project="00_TEST"
     prefix="output"
 	  outdir="s3://genomics-workflow-core/Results/reads-profiler"
+    rna = false       // Is the input data RNA? Requires "taxonomic_profile" to be set as well.
+    taxonomic_profile = null    // <S3Path> Use in case metaphlan results are already available.
     
 				
     /* 	Processing parameters
@@ -81,11 +83,16 @@ dag {
 
 process 
 {
+  maxRetries = 5
+	executor = 'awsbatch'
+	queue = 'default-maf-pipelines'
+	cleanup = true
 	withName: merge_paired_end_cleaned 
 	{
-		time =  '15m'
+		time =  '4h'
 		cpus = 4
-		memory = '32 GB'  
+		memory = '32 GB'
+    errorStrategy = 'retry'
 	}
 	
 	withName: profile_taxa 
@@ -93,13 +100,15 @@ process
 		time =  '4h'
 		cpus = 4
 		memory = '32 GB'  
+    errorStrategy = 'retry'
 	}
 
 	withName: profile_function 
 	{
 		time =  '48h'
-		cpus = 4
-		memory = '32 GB'  
+		cpus = 16
+		memory = '120 GB'  
+    errorStrategy = 'retry'
 	}	
 
 	withName: log
@@ -107,7 +116,6 @@ process
 		time =  '30m'
 		cpus = 2
 		memory = '8 GB'  
-    errorStrategy = 'ignore'
-	}
-	
+		errorStrategy = 'ignore'
+	}		
 }
