changes to work with Nextflow v22.04.5

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,8 +2,9 @@ manifest {
   name = 'nf-reads-profiler'
   author = 'Sunit Jain'
   homePage = 'https://github.com/fischbachlab/nf-profile-reads'
-  description = 'Metaphlan'
+  description = 'Metaphlan and HUMANn'
   mainScript = 'main.nf'
+  defaultBranch = 'main'
   version = '0.0.1'
 }
 
@@ -87,6 +88,7 @@ process
 	executor = 'awsbatch'
 	queue = 'default-maf-pipelines'
 	cleanup = true
+  cache = false
 	withName: merge_paired_end_cleaned 
 	{
 		time =  '4h'
