fix metaphlan db index

--- a/nextflow.config
+++ b/nextflow.config
@@ -41,6 +41,7 @@ params {
      --------------------------------*/
    
     //BowTie2 databases for MetaPhlAn
+    metaphlan_index="mpa_v30_CHOCOPhlAn_201901"
     metaphlan_db="/mnt/efs/databases/Biobakery/metaphlan"
     bt2options="very-sensitive" //presets options for BowTie2
   
