updated biobakery docker URL

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,7 +14,7 @@ params {
 
     /* 	Containers
      --------------------------------*/
-    docker_container_biobakery = "biobakery/workflows:3.0.0.a.7"
+    docker_container_biobakery = "458432034220.dkr.ecr.us-west-2.amazonaws.com/biobakery/workflows:maf-20221028-a1"
     docker_container_multiqc = "quay.io/biocontainers/multiqc:1.11--pyhdfd78af_0"
     docker_container_qiime2 = "qiime2/core:2020.8"
     docker_container_bbmap = "quay.io/biocontainers/bbmap:38.87--h1296035_0"
@@ -42,7 +42,7 @@ params {
    
     //BowTie2 databases for MetaPhlAn
     metaphlan_index="mpa_v30_CHOCOPhlAn_201901"
-    metaphlan_db="/mnt/efs/databases/Biobakery/metaphlan"
+    metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/v3.0"
     bt2options="very-sensitive" //presets options for BowTie2
   
     // ChocoPhlAn and UniRef databases for HUMANn analysis
