--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ manifest {
   description = 'Metaphlan and HUMANn'
   mainScript = 'main.nf'
   defaultBranch = 'main'
-  version = '0.0.1'
+  version = '0.0.2'
 }
 
 includeConfig "$projectDir/conf/aws_batch.config"
@@ -41,13 +41,13 @@ params {
      --------------------------------*/
    
     //BowTie2 databases for MetaPhlAn
-    metaphlan_index="mpa_v30_CHOCOPhlAn_201901"
-    metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/v3.0"
+    metaphlan_index="mpa_vJan21_CHOCOPhlAnSGB_202103"
+    metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/v4.0"
     bt2options="very-sensitive" //presets options for BowTie2
   
     // ChocoPhlAn and UniRef databases for HUMANn analysis
-    chocophlan="/mnt/efs/databases/Biobakery/chocophlan"
-    uniref="/mnt/efs/databases/Biobakery/uniref"
+    chocophlan="/mnt/efs/databases/Biobakery/Humann/v3.6/chocophlan"
+    uniref="/mnt/efs/databases/Biobakery/Humann/v3.6/uniref"
 	
   
     /* 	Initialisation
