--- a/nextflow.config
+++ b/nextflow.config
@@ -48,6 +48,7 @@ params {
     // ChocoPhlAn and UniRef databases for HUMANn analysis
     chocophlan="/mnt/efs/databases/Biobakery/Humann/v3.6/chocophlan"
     uniref="/mnt/efs/databases/Biobakery/Humann/v3.6/uniref"
+    utility_mapping="/mnt/efs/databases/Biobakery/Humann/v3.6/utility_mapping"
 	
   
     /* 	Initialisation
