Increased the profile_taxa run time to 12h

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,51 +18,51 @@ params {
     docker_container_multiqc = "quay.io/biocontainers/multiqc:1.11--pyhdfd78af_0"
     docker_container_qiime2 = "qiime2/core:2020.8"
     docker_container_bbmap = "quay.io/biocontainers/bbmap:38.87--h1296035_0"
-	
+
     /* 	Execution flow parameters
-     --------------------------------*/	
-	
+     --------------------------------*/
+
     config_profile_name        = 'Default profile'
     config_profile_description = 'nf-profile-reads default workflow'
-		
-    /* 	Execution flow parameters
-     --------------------------------*/		
 
-    singleEnd = false  //Whether we the input reads are single or paired-end 
+    /* 	Execution flow parameters
+     --------------------------------*/
+
+    singleEnd = false  //Whether we the input reads are single or paired-end
     mergeReads = false
     project="00_TEST"
     prefix="output"
 	  outdir="s3://genomics-workflow-core/Results/reads-profiler"
     rna = false       // Is the input data RNA? Requires "taxonomic_profile" to be set as well.
     taxonomic_profile = null    // <S3Path> Use in case metaphlan results are already available.
-    
-				
+    annotation  = false  // whether annotation is enabled  or not
+
     /* 	Processing parameters
      --------------------------------*/
-   
+
     //BowTie2 databases for MetaPhlAn
     metaphlan_index="mpa_vJan21_CHOCOPhlAnSGB_202103"
     metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/v4.0"
     bt2options="very-sensitive" //presets options for BowTie2
-  
+
     // ChocoPhlAn and UniRef databases for HUMANn analysis
     chocophlan="/mnt/efs/databases/Biobakery/Humann/v3.6/chocophlan"
     uniref="/mnt/efs/databases/Biobakery/Humann/v3.6/uniref"
     utility_mapping="/mnt/efs/databases/Biobakery/Humann/v3.6/utility_mapping"
-	
-  
+
+
     /* 	Initialisation
      --------------------------------*/
-  
+
     //These are used when the analysis is in characterisation mode
     reads1 = ""
     reads2 = ""
-    
+
     //These are used to print version and help
     help = null
     version = null
-    
-    multiqc_config="$baseDir/conf/multiqc_config.yaml"
+
+    multiqc_config="$projectDir/conf/multiqc_config.yaml"
 }
 
 
@@ -84,42 +84,42 @@ dag {
     file = "$params.outdir/$params.project/execution_reports/pipeline_dag.html"
 }
 
-process 
+process
 {
   maxRetries = 5
 	executor = 'awsbatch'
 	queue = 'default-maf-pipelines'
 	cleanup = true
   cache = false
-	withName: merge_paired_end_cleaned 
+	withName: merge_paired_end_cleaned
 	{
 		time =  '4h'
 		cpus = 4
 		memory = '32 GB'
     errorStrategy = 'retry'
 	}
-	
-	withName: profile_taxa 
+
+	withName: profile_taxa
 	{
-		time =  '4h'
-		cpus = 4
-		memory = '32 GB'  
+		time =  '12h'
+		cpus = 16
+		memory = '64 GB'
     errorStrategy = 'retry'
 	}
 
-	withName: profile_function 
+	withName: profile_function
 	{
 		time =  '48h'
 		cpus = 16
-		memory = '120 GB'  
+		memory = '120 GB'
     errorStrategy = 'retry'
-	}	
+	}
 
 	withName: log
 	{
 		time =  '30m'
 		cpus = 2
-		memory = '8 GB'  
+		memory = '8 GB'
 		errorStrategy = 'ignore'
-	}		
+	}
 }
