updated container and database locations

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,7 @@ params {
     /* 	Containers
      --------------------------------*/
     docker_container_biobakery = "458432034220.dkr.ecr.us-west-2.amazonaws.com/biobakery/workflows:maf-20221028-a1"
+    docker_container_metaphlan = "458432034220.dkr.ecr.us-west-2.amazonaws.com/metaphlan:4.1.0"
     docker_container_multiqc = "quay.io/biocontainers/multiqc:1.11--pyhdfd78af_0"
     docker_container_qiime2 = "qiime2/core:2020.8"
     docker_container_bbmap = "quay.io/biocontainers/bbmap:38.87--h1296035_0"
@@ -41,8 +42,8 @@ params {
      --------------------------------*/
 
     //BowTie2 databases for MetaPhlAn
-    metaphlan_index="mpa_vJan21_CHOCOPhlAnSGB_202103"
-    metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/v4.0"
+    metaphlan_index="mpa_vJun23_CHOCOPhlAnSGB_202307_bt2"
+    metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/v4.1.0"
     bt2options="very-sensitive" //presets options for BowTie2
 
     // ChocoPhlAn and UniRef databases for HUMANn analysis
