Added a seedfile option to process samples in batch Auto-merge the metaphlan bug list files and generate a heatmap if applicable

--- a/nextflow.config
+++ b/nextflow.config
@@ -37,6 +37,7 @@ params {
     rna = false       // Is the input data RNA? Requires "taxonomic_profile" to be set as well.
     taxonomic_profile = null    // <S3Path> Use in case metaphlan results are already available.
     annotation  = false  // whether annotation is enabled  or not
+    seedfile =""
 
     /* 	Processing parameters
      --------------------------------*/
