Updated the code to make alpha diversity as an option

--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,8 @@ params {
     taxonomic_profile = null    // <S3Path> Use in case metaphlan results are already available.
     annotation  = false  // whether annotation is enabled  or not
     seedfile =""
+    alpha = false    // whether alpha_diversity is enabled  or not
+
 
     /* 	Processing parameters
      --------------------------------*/
