--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,7 @@ params {
     docker_container_multiqc = "quay.io/biocontainers/multiqc:1.11--pyhdfd78af_0"
     docker_container_qiime2 = "qiime2/core:2020.8"
     docker_container_bbmap = "quay.io/biocontainers/bbmap:38.87--h1296035_0"
+    docker_container_datamash = "quay.io/biocontainers/datamash:1.1.0"
 
     /* 	Execution flow parameters
      --------------------------------*/
