--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,8 @@ params {
     docker_container_qiime2 = "qiime2/core:2020.8"
     docker_container_bbmap = "quay.io/biocontainers/bbmap:38.87--h1296035_0"
     docker_container_datamash = "quay.io/biocontainers/datamash:1.1.0--0"
-
+    docker_container_sanger = "458432034220.dkr.ecr.us-west-2.amazonaws.com/nf-sanger:latest"
+    
     /* 	Execution flow parameters
      --------------------------------*/
 
