--- a/nextflow.config
+++ b/nextflow.config
@@ -14,7 +14,8 @@ params {
 
     /* 	Containers
      --------------------------------*/
-    docker_container_biobakery = "458432034220.dkr.ecr.us-west-2.amazonaws.com/biobakery/workflows:maf-20221028-a1"
+     // the latest biobakery image ( metaphlan 4.1 humann 3.9 )
+    docker_container_biobakery = "458432034220.dkr.ecr.us-west-2.amazonaws.com/biobakery/workflows:20260113165025" //"458432034220.dkr.ecr.us-west-2.amazonaws.com/biobakery/workflows:maf-20221028-a1"
     docker_container_metaphlan = "458432034220.dkr.ecr.us-west-2.amazonaws.com/metaphlan:4.1.0"
     docker_container_multiqc = "quay.io/biocontainers/multiqc:1.11--pyhdfd78af_0"
     docker_container_qiime2 = "qiime2/core:2020.8"
@@ -46,10 +47,13 @@ params {
     /* 	Processing parameters
      --------------------------------*/
 
-    //BowTie2 databases for MetaPhlAn
-    metaphlan_index="mpa_vJun23_CHOCOPhlAnSGB_202307"
-    metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/v4.1.0"
+    //Bowtie2 databases for MetaPhlAn
+    metaphlan_index="mpa_vJun23_CHOCOPhlAnSGB_202307" // "mpa_vJan21_CHOCOPhlAnSGB_202103" 
+    metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/v4.1.0" // "/mnt/efs/databases/Biobakery/Metaphlan/v4.0" 
     bt2options="very-sensitive" //presets options for BowTie2
+
+// metaphlan_index="mpa_vJan25_CHOCOPhlAnSGB_202503"  // will be used when humann upgrades to 4.0+
+// metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/latest"  // will be used when humann upgrades to 4.0+
 
     // ChocoPhlAn and UniRef databases for HUMANn analysis
     chocophlan="/mnt/efs/databases/Biobakery/Humann/v3.6/chocophlan"
@@ -92,7 +96,7 @@ dag {
 
 process
 {
-  maxRetries = 5
+  maxRetries = 2
 	executor = 'awsbatch'
 	queue = 'default-maf-pipelines'
 	cleanup = true
@@ -117,8 +121,8 @@ process
 	{
 		time =  '48h'
 		cpus = 16
-		memory = '120 GB'
-    errorStrategy = 'retry'
+		memory = '240 GB'
+    errorStrategy = 'ignore'
 	}
 
 	withName: log
