--- a/nextflow.config
+++ b/nextflow.config
@@ -48,12 +48,12 @@ params {
      --------------------------------*/
 
     //Bowtie2 databases for MetaPhlAn
-    metaphlan_index="mpa_vJun23_CHOCOPhlAnSGB_202307" // "mpa_vJan21_CHOCOPhlAnSGB_202103" 
-    metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/v4.1.0" // "/mnt/efs/databases/Biobakery/Metaphlan/v4.0" 
+    metaphlan_index="mpa_vJan25_CHOCOPhlAnSGB_202503"  // works with humann  4.0+
+    metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/latest"  // works with humann 4.0+
     bt2options="very-sensitive" //presets options for BowTie2
 
-// metaphlan_index="mpa_vJan25_CHOCOPhlAnSGB_202503"  // will be used when humann upgrades to 4.0+
-// metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/latest"  // will be used when humann upgrades to 4.0+
+    //metaphlan_index="mpa_vJun23_CHOCOPhlAnSGB_202307" // "mpa_vJan21_CHOCOPhlAnSGB_202103" 
+    //metaphlan_db="/mnt/efs/databases/Biobakery/Metaphlan/v4.1.0" // "/mnt/efs/databases/Biobakery/Metaphlan/v4.0" 
 
     // ChocoPhlAn and UniRef databases for HUMANn analysis
     chocophlan="/mnt/efs/databases/Biobakery/Humann/v3.6/chocophlan"
